[gd_scene load_steps=2 format=3 uid="uid://gnjku8xlwj2m"]

[ext_resource type="Script" path="res://src/scenes/ui/pause menu/pause_menu.gd" id="1_t0gqf"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t0gqf")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -68.0
offset_right = 80.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Save" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Settings")
text = "Save"

[node name="Settings" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
focus_neighbor_top = NodePath("../Save")
focus_neighbor_bottom = NodePath("../Quit")
text = "Settings"

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
focus_neighbor_top = NodePath("../Settings")
focus_neighbor_bottom = NodePath("../Save")
text = "Quit"

[node name="PopupPanel" type="PopupPanel" parent="."]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(350, 100)

[node name="MarginContainer" type="MarginContainer" parent="PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 346.0
offset_bottom = 96.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="PopupMessage" type="Label" parent="PopupPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Game saved successfully!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
